--- a/package.json
+++ b/package.json
@@ -42,8 +42,15 @@
     "@drpiou/ts-utils": "https://github.com/drpiou/ts-utils.git#hotfix/vite-integration",
     "@types/lodash": "^4.14.182",
     "@types/node": "^18.6.4",
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
+    "eslint": "^8.14.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.5.0",
     "axios": "^0.27.2",
     "lodash": "^4.17.21",
+    "prettier": "^2.6.2",
     "typescript": "^4.6.4",
     "vite": "^3.0.0",
     "vite-plugin-dts": "^1.4.1"
