--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "axios": "^0.27.2"
   },
   "devDependencies": {
-    "@drpiou/ts-utils": "https://github.com/drpiou/ts-utils.git#hotfix/vite-integration",
+    "@drpiou/ts-utils": "https://github.com/drpiou/ts-utils.git#develop",
     "@types/lodash": "^4.14.182",
     "@types/node": "^18.6.4",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
